[package]
name = "ffishim"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1"
paste = "^0"
syn = { version = "^1", features = ["derive", "extra-traits", "full", "fold", "visit"] }
quote = "^1"
