[package]
name = "ffishim"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
darling = "^0"
libc = "^0"
once_cell = "^1"
paste = "^0"
proc-macro2 = "^1"
syn = "^1"
quote = "^1"
