[package]
name = "ffishim"
description = "Library behind ffishim_derive"
keywords = ["ffi", "bindings", "c"]
categories = ["external-ffi-bindings"]
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/ffishim"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
darling = "^0"
heck = "^0"
libc = "^0"
once_cell = "^1"
paste = "^0"
proc-macro2 = "^1"
syn = "^1"
quote = "^1"
