[package]
name = "ffishim_derive"
description = "Procedural macros for generating ffi-compatible stubs"
keywords = ["ffi", "bindings", "c"]
categories = ["development-tools::ffi"]
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/ffishim"
license = "MIT OR Apache-2.0"
readme = "../README.md"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "^0"
ffishim = "^0"
proc-macro2 = "^1"
syn = "^1"
quote = "^1"

[lib]
proc-macro = true
